--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root {
+    --red: #dd5138;
+    --yellow: #f3df49;
+    --light-gray: #f9f9f9;
+    --dark-gray: #777;
+    --base-shadow: 0px 0px 5px 2px rgba(179, 177, 177, 0.2);
+    --dark-shadow: 0px 0px 5px 2px rgba(179, 177, 177, 0.4);
+}
+
 body {
     margin: 0;
     padding: 0;
