--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ a:focus {
 
 .app-aside {
     padding: 50px 25px;
-    background-color: #f3df49;
+    background-color: var(--yellow);
 }
 
 .logo-block {
@@ -95,6 +95,10 @@ a:focus {
     text-align: center;
 }
 
+.section__content {
+    line-height: 1.5;
+}
+
 .section__grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -108,10 +112,26 @@ a:focus {
 }
 
 .item {
+}
+
+.item__link {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 15px 25px;
+    color: #000;
     text-align: center;
+    text-decoration: none;
+    box-shadow: var(--base-shadow);    
+    border-radius: 5px;
+    transition: all .3s;
+}
+
+.item__link:hover,
+.item__link:focus {
+    text-decoration: none;
+    box-shadow: var(--dark-shadow);    
 }
 
 .item__avatar {
@@ -120,14 +140,14 @@ a:focus {
 
 .item__number {
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     margin: auto;
     font-size: 1.5em;
     font-weight: bold;
-    line-height: 50px;
+    line-height: 80px;
     border-radius: 50%;
-    background-color: #dd5138;
+    background-color: var(--red);
     color: #fff;
 }
 
@@ -135,6 +155,7 @@ a:focus {
     width: 150px;
     height: 150px;
     margin: auto;
+    object-fit: cover;
     border-radius: 50%;
 }
 
@@ -146,7 +167,7 @@ a:focus {
     margin-top: 0;
     margin-bottom: 15px;
     font-size: 0.8em;
-    color: #777;
+    color: var(--dark-gray);
 }
 
 .item__rating {
@@ -237,14 +258,19 @@ a:focus {
 .rating[data-rating="5"] .rating__fill-star-wrap {
     width: 124px;
 }
+
 .item__btn {
     margin-top: auto;
     padding: 8px 15px;
     font-size: 1em;
     color: #fff;
-    background-color: #dd5138;
+    background-color: var(--red);
     border: none;
     cursor: pointer;
+}
+
+.item__data-link {
+    font-size: .9em;
 }
 
 .item__btn:hover,
@@ -256,18 +282,20 @@ a:focus {
 .item-page {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-column-gap: 25px
+    grid-column-gap: 25px;
+    align-items: start;
 }
+
 .item-page__aside {
-
+    position: sticky;
+    top: 25px;
 }
-.item-page__main {
 
-}
+.item-page__main {}
 
 .comment {
     padding: 35px 25px;
-    background-color: #f9f9f9;
+    background-color: var(--light-gray);
 }
 
 .comment:not(:last-child),
@@ -278,7 +306,7 @@ a:focus {
 .comment__author {
     margin-bottom: 20px;
     font-size: 0.7em;
-    color: #777;
+    color: var(--dark-gray);
 }
 
 .comment__block-title {
